public class Admin extends Empleado {
    
    public Admin(String documentos, String nombre, double sueldoHora, Empresa empresa) {
        super(documentos, nombre, sueldoHora, empresa);
    }

}
