public class Desarrollador extends Empleado{
    
    public Desarrollador(String documentos, String nombre, double sueldoHora, Empresa empresa) {
        super(documentos, nombre, sueldoHora, empresa);
    }

}
